# ruckus

./: .env.example  .gitignore  CLAUDE.md  LOCAL_DEVELOPMENT.md  README.md  TESTING_SETUP.md  environment.yml  pyproject.toml
agent/: README.md  environment.yml  pyproject.toml  pytest.ini
agent/scripts/: run-service-uvicorn
agent/src/ruckus_agent/: __init__.py  logging.yml  main.py
agent/src/ruckus_agent/adapters/: __init__.py  base.py  blackbox_adapter.py  pytorch_adapter.py  transformers_adapter.py  vllm_adapter.py
agent/src/ruckus_agent/api/v1/: api.py
agent/src/ruckus_agent/core/: __init__.py  agent.py  config.py  detector.py  models.py  result_cache.py  storage.py
agent/src/ruckus_agent/metrics/: __init__.py  base.py  performance.py  quality.py  resource.py
agent/src/ruckus_agent/tasks/: __init__.py  base.py  wikipedia_summarization.py
agent/src/ruckus_agent/utils/: error_reporter.py  gpu_benchmark.py  hardware_detection.py  model_cache.py  model_config_parser.py  model_discovery.py
agent/tests/: __init__.py  test_agent.py  test_api.py  test_detector.py  test_end_to_end_integration.py  test_error_reporter.py  test_gpu_benchmark.py  test_hardware_detection.py  test_integration.py  test_llm_conversation_capture.py  test_mocks.py  test_model_discovery.py  test_model_type_detection.py  test_multi_run_jobs.py  test_storage.py  test_transformers_real_implementation.py  test_vllm_adapter.py
common/: README.md  pyproject.toml  pytest.ini
common/src/ruckus_common/: __init__.py  command.txt  command.yaml  constants.py  models.py  protocol.py  utils.py
common/tests/: __init__.py  test_models.py
docker/agent/: .env  Dockerfile  README.md  docker-compose.yml
docs/: API_CAPABILITY_MATCHING.md  TESTING_CAPABILITY_MATCHING.md  overview.md  project_overview.md  project_structure.md
environments/: environment.yml
server/: environment.yml  pyproject.toml
server/scripts/: run-service-uvicorn
server/src/ruckus_server/: __init__.py  logging.yml  main.py
server/src/ruckus_server/api/: __init__.py
server/src/ruckus_server/api/v1/: api.py  models.py
server/src/ruckus_server/api/v1/routers/: agents.py  experiments.py  jobs.py  results.py
server/src/ruckus_server/core/: __init__.py  agent.py  agent_manager.py  config.py  database.py  database_models.py  experiment_manager.py  job_manager.py  models.py  orchestrator.py  scheduler.py  server.py
server/src/ruckus_server/core/clients/: __init__.py  http.py  simple_http.py
server/src/ruckus_server/core/settings/: settings.py
server/src/ruckus_server/core/storage/: __init__.py  base.py  factory.py  postgresql.py  sqlite.py
server/src/ruckus_server/services/: __init__.py
server/src/ruckus_server/utils/: job_utility.py  logging.py
server/tests/: __init__.py  conftest.py  test_agent_manager.py  test_agent_protocol_utility.py  test_api_endpoints.py  test_api_v1_experiments_get.py  test_api_v1_experiments_list.py  test_capability_matching.py  test_experiment_api_endpoints.py  test_experiment_manager.py  test_experiment_manager_get.py  test_experiment_manager_list.py  test_http_clients.py  test_integration.py  test_job_endpoints.py  test_job_manager.py  test_models.py  test_orchestration_workflow.py  test_postgresql_storage_backend.py  test_ruckus_server.py  test_storage_backends.py  test_storage_get_experiment.py  test_storage_job_methods.py  test_storage_list_experiments.py
src/ruckus/: __init__.py
src/ruckus/agent/: __init__.py  main.py
src/ruckus/agent/api/: __init__.py
src/ruckus/agent/api/v1/: __init__.py  api.py
src/ruckus/agent/core/: __init__.py  agent.py  config.py  models.py
src/ruckus/orchestrator/: __init__.py  main.py
src/ruckus/orchestrator/api/: __init__.py
src/ruckus/orchestrator/core/: __init__.py  config.py  database.py  database_models.py  models.py  orchestrator.py
src/ruckus/orchestrator/tests/: conftest.py  test_orchestrator.py
tests/agent/: __init__.py  conftest.py  test_agent.py
tests/orchestrator/: __init__.py
ui/: .env  .env.example  README.md  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.tsx  index.css  index.tsx  vite-env.d.ts
ui/src/components/: AgentsTab.css  AgentsTab.tsx  ConversationDisplay.css  ConversationDisplay.tsx  ExperimentsTab.css  ExperimentsTab.tsx  JobsTab.css  JobsTab.tsx  ResultsTab 2.css  ResultsTab.css  ResultsTab.tsx  SettingsMenu.css  SettingsMenu.tsx  VisualizationTab.css  VisualizationTab.tsx
ui/src/components/Layout/: Layout.tsx
ui/src/components/charts/: BandwidthChart.tsx  FlopsChart.tsx  LLMPerformanceChart.tsx  PrecisionChart.tsx  charts.css
ui/src/contexts/: ThemeContext.tsx
ui/src/hooks/: useColumnReorder.ts  useTableSort.ts
ui/src/pages/Agents/: Agents.tsx
ui/src/pages/Dashboard/: Dashboard.tsx
ui/src/pages/Experiments/: Experiments.tsx
ui/src/pages/Jobs/: Jobs.tsx
ui/src/services/: api.ts  exportService.ts
ui/src/types/: api.ts
ui/src/utils/: chartDataProcessor.ts  format.ts
(+6 files in other folders)
