[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruckus-common"
version = "0.1.0"
description = "RUCKUS shared protocol and models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ruckus_common"]
