[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruckus-server"
version = "0.1.0"
description = "RUCKUS distributed benchmarking server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "uvicorn",
    "ruckus-common",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
ruckus-server = "ruckus_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ruckus_server"]
