[project]
name = "ruckus_server"
version = "0.1.0"
description = "Ruckus experiment server application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
# Suppress warnings from external packages that we cannot fix
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:ruckus_common.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:pydantic.*",
    "ignore::DeprecationWarning:httpx.*",
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning:pydantic.*",
    # Allow all other warnings to be shown
]
